--- a/src/app/body/contact/social-accounts/social-accounts.component.html
+++ b/src/app/body/contact/social-accounts/social-accounts.component.html
@@ -1,21 +1,26 @@
-<div class="col col-md-6">
-  <div class="link col col-xs-12">
-    <a href="http://twitter.com/[Your account]" target="_blank">
+<div class="col col-md-12">
+  <div class="link ">
+    <a href="https://twitter.com/thadubsdavid" target="_blank">
       <span class="icon icon-twitter"></span>
-      http://twitter.com/[Your account]</a>
+    </a>
   </div>
-  <div class="link col col-xs-12">
-    <a href="http://linkedin.nl/in/pascalvgemert/" target="_blank">
+  <div class="link ">
+    <a href="https://linkedin.com/in/davidpatrickadam/" target="_blank">
       <span class="icon icon-linkedin"></span>
-      http://linkedin.nl/in/[Your account]/</a>
+    </a>
   </div>
-</div>
-<div class="col col-md-6">
-  <div class="link col col-xs-12">
-    <a href="mailto:[Your account]@[Your domain]">
+  <div class="link ">
+    <a href="mailto:davidpatrickadam@gmail.com">
       <span class="icon icon-email"></span>
-      <span style="unicode-bidi:bidi-override; direction: rtl;">
-						[Your account]@[Your domail=n]</span>
     </a>
   </div>
 </div>
+<!--div class="col col-md-6">
+  <div class="link col col-xs-12">
+    <a href="https://github.com/thadubsdavid/">
+      <span class="icon icon-github"></span>
+      <span style="unicode-bidi:bidi-override">
+						@thadubsdavid</span>
+    </a>
+  </div>
+</div-->
