--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,10 +4,10 @@
       <div class="col col-xs-12 col-sm-10 col-sm-push-1 col-md-8 col-md-push-2">
         <h1 class="title">{{ userInfo['name'] }}</h1>
         <p class="subtitle">{{ pageInfo['resumeTitle'] }}</p>
-        <div class="text-center project-referal">
+        <!--div class="text-center project-referal">
           <p>This code is available on GitHub.</p>
-          <a href="https://github.com/Wrinth/personal_profile_angular4" class="btn btn-primary" target="_blank">See project on Github</a>
-        </div>
+          <a href="https://github.com/thadubsdavid/personal-profile-angular" class="btn btn-primary" target="_blank">See project on Github</a>
+        </div-->
       </div>
     </div>
   </div>
