--- a/src/app/body/contact/contact.component.html
+++ b/src/app/body/contact/contact.component.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col col-xs-12 col-sm-8 col-sm-push-2">
         <h2 class="title">Contact</h2>
-        <!--p class="subtitle">[some experience]</p-->
+        <!--p class="subtitle">[Test]</p-->
         <hr>
         <app-social-accounts></app-social-accounts>
       </div>
